@@ -7,3 +7,11 @@ Note: Changes to en_us.json before Create Big Cannons 0.5.3.b => 0.5.4 will not 
 ---
 
 ## 0.5.3.b → 0.5.4
+
+Additions: \
+&plus; `"item.createbigcannons.autocannon_ammo_container.tooltip.main_ammo": "x%1$s %2$s"` \
+&plus; `"item.createbigcannons.autocannon_ammo_container.tooltip.tracers": "Tracers: x%1$s %2$s"` \
+&plus; `"item.createbigcannons.autocannon_ammo_container.tooltip.tracers": "Tracer Spacing: 1 tracer every %s round(s)"`
+
+Key Changes: \
+`"item.createbigcannons.autocannon_ammo_container"` → `"block.createbigcannons.autocannon_ammo_container"`
