@@ -13,6 +13,9 @@
   "block.createbigcannons.autocannon.tooltip.weightImpact": "\u0287\u0254\u0250d\u026FI \u0287\u0265b\u0131\u01DDM",
   "block.createbigcannons.autocannon.tooltip.weightImpact.goggles": "\u203EW\u0500\u1D1A x%s\u203E",
   "block.createbigcannons.autocannon_ammo_container": "\u0279\u01DDu\u0131\u0250\u0287uo\u0186 o\u026F\u026F\u2C6F uouu\u0250\u0254o\u0287n\u2C6F",
+  "block.createbigcannons.autocannon_ammo_container.tooltip.main_ammo": "%2$s %1$sx",
+  "block.createbigcannons.autocannon_ammo_container.tooltip.tracer_spacing": ")s(puno\u0279 %s \u028E\u0279\u01DD\u028C\u01DD \u0279\u01DD\u0254\u0250\u0279\u0287 \u0196 :bu\u0131\u0254\u0250dS \u0279\u01DD\u0254\u0250\u0279\u27D8",
+  "block.createbigcannons.autocannon_ammo_container.tooltip.tracers": "%2$s %1$sx :s\u0279\u01DD\u0254\u0250\u0279\u27D8",
   "block.createbigcannons.autocannon_barrel_cast_mould": "p\u05DFnoW \u0287s\u0250\u0186 \u05DF\u01DD\u0279\u0279\u0250\u15FA uouu\u0250\u0254o\u0287n\u2C6F",
   "block.createbigcannons.autocannon_breech_cast_mould": "p\u05DFnoW \u0287s\u0250\u0186 \u0265\u0254\u01DD\u01DD\u0279\u15FA uouu\u0250\u0254o\u0287n\u2C6F",
   "block.createbigcannons.autocannon_recoil_spring_cast_mould": "p\u05DFnoW \u0287s\u0250\u0186 bu\u0131\u0279dS \u05DF\u0131o\u0254\u01DD\u1D1A uouu\u0250\u0254o\u0287n\u2C6F",
